@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 2.6)
 
 SET(DISPLAY_PACKAGE_VERSION_MAJOR 2)
 SET(DISPLAY_PACKAGE_VERSION_MINOR 0)
-SET(DISPLAY_PACKAGE_VERSION_PATCH 1)
+SET(DISPLAY_PACKAGE_VERSION_PATCH 2)
 
 
 # Get the current branch
