@@ -189,16 +189,16 @@ START_GLOBALS
     DEF_GLOBAL( Set_invalid_to_zero, VIO_BOOL, FALSE )
 
     DEF_GLOBAL_COLOUR( Colour_below )
-    DEF_GLOBAL( Initial_low_absolute_position, VIO_Real, -1 )
-    DEF_GLOBAL( Initial_high_absolute_position, VIO_Real, -1 )
     DEF_GLOBAL( Initial_histogram_contrast, VIO_BOOL, TRUE )
     DEF_GLOBAL( Initial_histogram_low_clip_index, int, 4 )
     DEF_GLOBAL( Initial_histogram_low, VIO_Real, 0.2 )
     DEF_GLOBAL( Initial_histogram_high, VIO_Real, 0.99999)
-    DEF_GLOBAL( Initial_low_limit_position, VIO_Real, 0.25 )
-    DEF_GLOBAL( Initial_high_limit_position, VIO_Real, 0.75 )
+    DEF_GLOBAL( Initial_coding_range_low, VIO_Real, 0.25 )
+    DEF_GLOBAL( Initial_coding_range_high, VIO_Real, 0.75 )
+    DEF_GLOBAL( Initial_coding_range_absolute, VIO_BOOL, FALSE )
     DEF_GLOBAL_COLOUR( Colour_above )
     DEF_GLOBAL( Initial_colour_coding_type, int, 1 )
+    DEF_GLOBAL( Current_colour_coding_type, int, 1 )
     DEF_GLOBAL( User_defined_interpolation_space, int, 1 )
     DEF_GLOBAL( Default_filter_type, int, 0 )
     DEF_GLOBAL( Default_filter_width, VIO_Real, 4.0 )
